--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href=""
+      href="/public/dragon-logo-icon-T6J0A7.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D N</title>
